--- a/Axios Application/style.css
+++ b/Axios Application/style.css
@@ -1,12 +1,12 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:700,300);
 .frame {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 400px;
-  height: 400px;
-  margin-top: -200px;
-  margin-left: -200px;
+  /* top: 50%; */
+  /* left: 50%; */
+  width: 800px;
+  height: 500px;
+  margin-top: 104px;
+  margin-left: 104px;
   border-radius: 2px;
   box-shadow: 4px 8px 16px 0 rgba(0, 0, 0, 0.1);
   overflow: hidden;
@@ -121,7 +121,7 @@
 }
 .card-line {
   margin-bottom: 3px;
-  height: 4px;
+  /* height: 4px; */
   background: #e0e0e0;
 }
 
